# oleum

./: .gitignore  LICENSE  README.md  oleum.example.toml  pyproject.toml  rust-toolchain.toml
docs/: OLEUM-DST-01_snippet_distillation_contract.md  OLEUM-RES-01_researcher_lane_draft.md  OLEUM-SPIKE-0_join_key_decision.md  ROADMAP.md
fixtures/join_ws/: Cargo.toml
fixtures/join_ws/app/: Cargo.toml
fixtures/join_ws/ext/: Cargo.toml
fixtures/join_ws/ext/src/: lib.rs
oleum/: __init__.py  __main__.py  config.py  harvest.py  mcp_server.py  opkey.py  probe.py  ra.py  traces.py  vinur_client.py
oleum/dst/: __init__.py  digest.py  freeze.py  merge.py  orchestrate.py  prompts.py  validate.py
producers/: build_pack.py  op_hazards.toml
spikes/spike0/: lsp_client.py  probe_trait.py  run_spike.py
spikes/spike0/results/: spike0_report.json
tests/: dst_test.py  harvest_test.py  hazard_pack_test.py  mcp_face_test.py  probe_test.py
