[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oleum"
version = "0.1.0"
description = "Rust practice oracle over the vinur knowledge host (MCP face + DST pipeline)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [{ name = "Daniel Aras" }]

[project.scripts]
oleum = "oleum.__main__:main"
oleum-probe = "oleum.probe:main"
oleum-harvest = "oleum.harvest:main"

[tool.setuptools.packages.find]
include = ["oleum*"]
